k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-app
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: ml-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ml-app
    spec:
      containers:
      - name: ml-app
        image: datravin/otus-repo:light
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /startup
            port: 80
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 300
          failureThreshold: 2
          periodSeconds: 10
